# Trabalhos-da-Faculdade

./: README.md
Atividade Avaliativa 3/: .project
Oitava Período/Computação Gráfica/Trabalho Prático 1/: main.py
Primeiro Periodo/ADA pe1/: Maiuscula.java
Primeiro Periodo/AED 1/Bibliotecas/: funcoesPrincipais.h
Primeiro Periodo/CS/: Trabalho questão cs.docx
Primeiro Periodo/DIW/TP1/: index.css  index.html
Primeiro Periodo/DIW/TP2/: README.md  index.html
Primeiro Periodo/LIP/Trabalho primeiro app inventor/: Trabalho lip.txt
Primeiro Periodo/Seminarios/Lista 01/: MarcosAniCuryVinagreSilva_684903.txt
Primeiro Periodo/Seminarios/Lista 2/: Exercicio1.java  Exercicio2.java  Exercicio4.java  Exercicio5.java  Exercicios3.java
Primeiro Periodo/Seminarios/Lista 3/: Exercicio10.java  Exercicio6.java  Exercicio7.java  Exercicio8.java  Exercicio9.java
Primeiro Periodo/Seminarios/SEMINARIOS_I/: Thumbs.db  ipsum.txt
Quarto Periodo/Grafos/Assingment 2/: ExemploInput.txt
Quinto Periodo/Engenharia de Software 2/: Atividade avaliativa 2.rar  README.md
Quinto Periodo/PAA Again/: Loja.py  Main.py  README.md  Store.py
Segundo Periodo/AED 2/: Links.txt
Segundo Periodo/TI 2/: Personas.docx  TI_2_Documentacao.docx  TI_2_GiftApp_Documentacao_2.docx  Trabalho de TI Vulnerabilidade de dados final.docx
Sexto Periodo/Programação Paralela/Tarefa 24/: CMakeLists.txt  Compilar.bash  Compilar_parcode.bash  Limpar.bash  Testar.bash  Testar_parcode.bash  resposta.c  sum_parlelo_multicore_cpu.c
Sétimo Período/Redes 2/: RoteiroRoteador.pkt
(+789 files in other folders)
